combined contacts and notification components. Added overflow hidden to fix teacher's card

--- a/client/src/components/Notifications/index.css
+++ b/client/src/components/Notifications/index.css
@@ -1,7 +1,7 @@
-.notification {
+/* .notification {
     height: 100vh;
     margin: 0 !important;
-}
+} */
 .requests-list,
 .response-list {
  padding-left: 5%;
